Review Request 16696: Some gc parameters for yarn container (for temporary testing)